--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>诗者</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>你需要使用支持JavaScript语言的浏览器访问。</noscript>
     <div id="root"></div>
   </body>
 </html>
