--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <div id="app">
+    <!--app-html-->
+  </div>
+  <script type="module" src="/src/entry-client.js"></script>
 </body>
 
 </html>
