--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
+  <!--preload-links-->
 </head>
 
 <body>
   <div id="app">
     <!--app-html-->
   </div>
-  <script type="module" src="/src/entry-client.js"></script>
+  <script type="module" src="./src/entry-server.js"></script>
 </body>
 
 </html>
