--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
   <div id="app">
-    <!--app-html-->
+    <!--app-htm   l-->
   </div>
-  <script type="module" src="./src/entry-server.js"></script>
+  <script type="module" src="./src/entry-client.js"></script>
 </body>
 
 </html>
